fix(index): intro was not responsive on mobile

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -32,6 +32,13 @@
         text-underline-offset: 6px;
       }
     }
+
+    @include mobile {
+      .intro {
+        padding: 0 0 1.8rem;
+        text-align: left;
+      }
+    }
   }
 }
 
